--- a/html/01_HD.html
+++ b/html/01_HD.html
@@ -58,7 +58,7 @@
 			residuedata: {
 				residue: 200,//红包剩余
 				enable: 1,//是否领导过，0为不可领
-				ajaxurl: 'javascript:;'//领红包AJAXurl
+				ajaxurl: '../static/js/ajax.json'//领红包AJAXurl
 			},
 			rolldata: ['a123123','b123123','c123123','d123123','e123123','f123123','g123123','h123123','ii123123','j123123'],//最新领到红包用户
 			btns:["www.baidu.com", "www.weibo.com", "www.google.com"]//我的红包，兑换记录，英雄榜URL
