--- a/html/02_HD.html
+++ b/html/02_HD.html
@@ -36,6 +36,7 @@
 				<em class="pa curr"></em>/
 				<em class="pa total"></em>
 			</div>
+			<div id="modal" class="pa modal"></div>
 		</script>
 	</div>
 	<script id="quan" type="html/text">
@@ -83,7 +84,7 @@
 						enable: 1,
 						imgsrc:"../static/images/icon_mgtv.jpg",
 						title:"芒果芒果芒果1",
-						exchangeurl:"www.baidu.com",
+						exchangeurl:"#",
 						prefectureurl:"www.weibo.com"
 					},
 					{
@@ -242,6 +243,15 @@
 			other: true,//开启其他模式
 			items: data.list //数据
 		});
+		WS.base.exchangeData = {
+			// success: 3,
+			// title: '芒果TV',
+			// perception: 30,
+			// spurl: 'www.baidu.com',
+			// exchangeurl: '#',
+			// msg: '错误提示错误',
+			// url: '02_HD.html'
+		}
 	</script>
 </body>
 </html>
