--- a/html/06_HD.html
+++ b/html/06_HD.html
@@ -19,7 +19,7 @@
 			<div class="pa prefecture_title">{{title}}</div>
 			<div class="pa time_limit">包月价格：{{price}}元/{{period}}</div>
 			<div class="pa btn_bx zqjs">
-				<a href="{{exchangeurl}}" class="btn btn-sm"><span>立即兑换</span></a>
+				<a href="{{exchangeurl}}" class="btn btn-sm J_focus"><span>立即兑换</span></a>
 				{{if vediourl && vediourl!=''}}
 					<a href="{{vediourl}}" class="btn btn-lg"><span>观看专区视频介绍</span></a>
 				{{/if}}
