--- a/html/02_HD.html
+++ b/html/02_HD.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>QHB-7-兑换专区-1</title>
-	<!-- <link rel="stylesheet" href="../../public/css/public.min.css">
-	<link rel="stylesheet" href="../static/css/base_HD.min.css"> -->
-	<link rel="stylesheet" href="http://10.1.15.50:8000/static/web-qhb/static/css/base_HD.mod.css">
+	<link rel="stylesheet" href="../../public/css/public.min.css">
+	<link rel="stylesheet" href="../static/css/base_HD.min.css">
+	<!-- <link rel="stylesheet" href="http://10.1.15.50:8000/static/web-qhb/static/css/base_HD.mod.css"> -->
 </head>
 <body >
 	<div id="wrap" class="pa wrap bg-exchange">
