--- a/html/03_HD.html
+++ b/html/03_HD.html
@@ -30,7 +30,7 @@
 		{{each list as v i}}
 			{{if i <= 4*row-1}}
 				<div class="hb">
-					<div class="title tc">{{v.title}}</div>
+					<div class="pa title tc">{{v.title}}</div>
 					{{if v.enable}}
 						<a href="{{v.exchangeurl}}" class="pa btn btn-xs"><span>立即兑换</span></a>
 					{{else}}
