--- a/html/06_HD.html
+++ b/html/06_HD.html
@@ -15,14 +15,16 @@
 					<a href="{{v}}" class="menu-btn {{if i==0}}back{{else if i==1}}home{{else}}index{{/if}}"></a>
 				{{/each}}
 			</div>
-			<img src="{{imgsrc}}" alt="" class="pa icon-img">
+			<div class="pa icon-img">
+				<img src="{{imgsrc}}" alt="">
+			</div>
 			<div class="pa prefecture_title">{{title}}</div>
 			<div class="pa time_limit">包月价格：{{price}}元/{{period}}</div>
 			<div class="pa btn_bx zqjs">
-				{{if enable==1}}
+				{{if enable==1 && residue>0}}
 					<a href="{{exchangeurl}}" class="btn btn-sm J_focus"><span>立即兑换</span></a>
 				{{else}}
-					<span class="btn btn-sm disable"><span>立即兑换</span></span>
+					<span class="btn btn-sm disable"><span>{{if residue<=0}}已兑完{{else}}已兑换{{/if}}</span></span>
 				{{/if}}
 				{{if vediourl && vediourl!=''}}
 					<a href="{{vediourl}}" class="btn btn-lg"><span>观看专区视频介绍</span></a>
@@ -60,7 +62,8 @@
 				title: "芒果TV",
 				price: 20,//单价
 				period: "月", //y年，m月，d天，w周
-				enable:0,
+				residue:200,
+				enable:1,
 				exchangeurl: "#",//立即兑换url
 				cont: "芒果TV是由湖南快乐阳光互动娱乐传媒有限公司负责具体运营的湖南广播电视台旗下唯一互联网视频供应平台，同时也是以视听互动为核心，融网络特色与电视特色于一体，面向电脑、手机、平板、电视机，实现“多屏合一”独播、跨屏、自制的新媒体视听综合传播服务平台。“芒果TV”呼号于2008年正式启用。芒果TV主要播放芒果台钻石独播剧场电视剧和其他综艺节目。芒果TV是由湖南快乐阳光互动娱乐传媒有限公司负责具体运营的湖南广播电视台旗下唯一互联网视频供应平台，面向电脑、手机、平板、电视机，实现“多屏合一”独播、跨屏、自制的新媒体视听综合传播服务平台。",
 				vediourl: "#"
@@ -74,7 +77,7 @@
 		// 	homeurl: "01_HD.html"//首页URL
 		// }
 		WS.base.exchangeData = {
-			// success: 4,//3为成功，4为失败
+			// success: 3,//3为成功，4为失败
 			// //成功输出
 			// title: '芒果TV',
 			// perception: 30,
