--- a/html/06_HD.html
+++ b/html/06_HD.html
@@ -16,7 +16,7 @@
 				{{/each}}
 			</div>
 			<div class="pa icon-img">
-				<img src="{{imgsrc}}" alt="">
+				<img src="{{imgsrc}}" alt="" width="100%" height="100%">
 			</div>
 			<div class="pa prefecture_title">{{title}}</div>
 			<div class="pa time_limit">包月价格：{{price}}元/{{period}}</div>
