--- a/html/04_HD.html
+++ b/html/04_HD.html
@@ -29,7 +29,7 @@
 		{{each list as v i}}
 			{{if i <= 5*row-1}}
 				<div class="jilu">
-					<img src="{{v.imgsrc}}" alt="" class="pa">
+					<div class="pa imgbx"><img src="{{v.imgsrc}}" alt="" width="100%" height="100%"></div>
 					<div class="pa title tc">{{v.title}}</div>
 					<div class="pa tc expire {{if v.expire>3}}red{{else if v.expire>0&&v.expire<4}}org{{else}}gray{{/if}}">还剩{{v.expire}}天</div>
 				</div>
