--- a/html/07_HD.html
+++ b/html/07_HD.html
@@ -58,11 +58,8 @@
 				],
 				list:[
 					{
-						text: ['在活动时间内，第一次进入红包争夺战相关页面，进行抢商家或用户红包的任意操作时，用户需点击确认，成为“确认参与用户”，方可参与活动，抢夺商家星球红包及其他确认参与用户的战争红包(战争红包是指通过红包火山、红包雨、商家星球抢夺获得的1212现金红包，通过红包秒杀方式获得的1212现金红包及通过参与密令红包活动获得的支付宝现金红包不属于战争红包，无法被抢夺)。战争红包以个为单位进行抢夺，与面额无关。', '红包争夺战包含以下三种红包抢夺模式：', '1. 方式一：抢商家星球红包', '(2)被抢夺成功(即失去一个战争红包)的用户，有1个小时的保护时间，在保护时间内，该用户无法被任何人再次进行抢夺。但处于保护时间内的用户主动选择对其他用户进行抢夺时，保护时间失效，该用户恢复到可以被其他用户抢夺的状态。']
+						text: ['快快看过来，现在可以领取红包免费兑换专区咯~！', '在活动期间，您可以点击“领”按钮领取红包，领取成功后进入专区兑换页面，选择想要观看的专区直接兑换。您如果有领取成功但还没有使用的红包，也可以直接进入“我的红包”，马上使用它们。', '是不是很给力！但是要注意哦：一个红包只能兑换一个专区，并且红包是有使用期限的，要及时使用。另外，兑换的专区会马上生效，观看时间为30天。', '马上玩起来吧！']
 					},
-					{
-						text: ['123412342134123412341234', '红包争夺战包含以下三种红包抢夺模式：', '1. 方式一：抢商家星球红包', '(2)被抢夺成功(即失去一个战争红包)的用户，有1个小时的保护时间，在保护时间内，该用户无法被任何人再次进行抢夺。但处于保护时间内的用户主动选择对其他用户进行抢夺时，保护时间失效，该用户恢复到可以被其他用户抢夺的状态。']
-					}
 					
 				],
 			},
