--- a/html/01_HD.html
+++ b/html/01_HD.html
@@ -5,7 +5,10 @@
 	<title>QHB-1-首页(该时段已抢过)</title>
 	<!-- <link rel="stylesheet" href="../../public/css/public.min.css">
 	<link rel="stylesheet" href="../static/css/base_HD.min.css"> -->
-	<link rel="stylesheet" href="../static/css/base_HD.mod.css">
+	<!-- <link rel="stylesheet" href="../static/css/base_HD.mod.css"> -->
+	<!-- <link rel="stylesheet" href="../static/css/base.css" type="text/css"> -->
+  <link rel="stylesheet" href="../static/css/base_HD.css">
+  <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
 </head>
 <body >
 	<div id="wrap" class="pa wrap bg-home">
@@ -51,6 +54,9 @@
 	<script src="../static/js/base_HD.js"></script>
 	<script src="../static/js/base_HD_Ajax.js"></script> -->
 	<script src="../static/js/base_HD.mod.js"></script>
+	<!-- <script src="/build/bundle.js"></script> -->
+	<!-- <script src="../../public/js/jquery.min.js"></script>
+  <script src="../static/js/bundle.js"></script> -->
 	<script>
 		var data = {
 			menuurl: ['#', '#', '#'],//菜单按钮URL,按顺序输出数组,
