--- a/html/01_HD.html
+++ b/html/01_HD.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>QHB-1-首页(该时段已抢过)</title>
-	<!-- <link rel="stylesheet" href="../../public/css/public.min.css">
-	<link rel="stylesheet" href="../static/css/base_HD.min.css"> -->
+	<link rel="stylesheet" href="../../public/css/public.min.css">
+	<link rel="stylesheet" href="../static/css/base_HD.min.css">
 	<!-- <link rel="stylesheet" href="../static/css/base_HD.mod.css"> -->
 	<!-- <link rel="stylesheet" href="../static/css/base.css" type="text/css"> -->
-  <link rel="stylesheet" href="../static/css/base_HD.css">
+  <!-- <link rel="stylesheet" href="../static/css/base_HD.css"> -->
   <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
 </head>
 <body >
@@ -26,13 +26,13 @@
 			<div class="pa residue {{if residuedata.residue>0}}red{{else if residuedata.residue==0}}gray{{else}}red{{/if}}">		{{if residuedata.residue!=-1}}本时段红包还剩<span>{{residuedata.residue}}</span>个{{/if}}
 			</div>
 			{{if residuedata.residue>0 && residuedata.enable}}
-				<a href="javascript:;" data-ajax={{residuedata.ajaxurl}} class="pa qing enable J_qing"></a>
+				<a href="javascript:;" data-ajax="{{residuedata.ajaxurl}}" class="pa qing enable J_qing"></a>
 			{{else if !residuedata.enable}}
 				<div class="pa qing end"></div>
 			{{else if residuedata.residue !=-1}}
 				<div class="pa qing null"></div>
 			{{else}}
-				<a href="javascript:;" data-ajax={{residuedata.ajaxurl}} class="pa qing enable J_qing"></a>
+				<a href="javascript:;" data-ajax="{{residuedata.ajaxurl}}" class="pa qing enable J_qing"></a>
 			{{/if}}
 			<marquee id="roll" class="pa roll">
 				{{each rolldata as sp}}
@@ -44,16 +44,19 @@
 				<a href="{{btn}}" class="btn btn-sm text {{if i==0}}myhb{{else if i==1}}dhjl{{else}}yxb{{/if}}"><span></span></a>
 				{{/each}}
 			</div>
-			<div id="modal" class="pa modal"></div>
+			<div class="pa modal experience"></div>
+			<div class="pa modal money"></div>
+			<div class="pa modal miss"></div>
+			<div class="pa modal fail"></div>
 			<a href="#" class="pa hbwf tc"></a>
 		</script>
 	</div>
-	<!-- <script src="../../public/js/jquery.min.js"></script>
+	<script src="../../public/js/jquery.min.js"></script>
 	<script src="../../public/js/jquery.x.min.js"></script>
 	<script src="../../public/js/template.js"></script>
 	<script src="../static/js/base_HD.js"></script>
-	<script src="../static/js/base_HD_Ajax.js"></script> -->
-	<script src="../static/js/base_HD.mod.js"></script>
+	<script src="../static/js/base_HD_Ajax.js"></script>
+	<!-- <script src="../static/js/base_HD.mod.js"></script> -->
 	<!-- <script src="/build/bundle.js"></script> -->
 	<!-- <script src="../../public/js/jquery.min.js"></script>
   <script src="../static/js/bundle.js"></script> -->
@@ -65,7 +68,7 @@
 				endtime: "2015-12-13  12:00"//红包开始时间，结束时间
 			},
 			residuedata: {
-				residue: -1,//红包剩余
+				residue: 20,//红包剩余
 				enable: 1,//是否领导过，0为不可领
 				ajaxurl: '../static/js/ajax.json'//领红包AJAXurl
 			},
