--- a/html/06_HD.html
+++ b/html/06_HD.html
@@ -31,7 +31,8 @@
 				{{/if}}
 			</div>
 			<div class="pa cont-text">{{cont}}</div>
-			<div id="modal" class="pa modal"></div>
+			<div class="pa modal fail"></div>
+			<div class="pa modal success"></div>
 			<a href="#" class="pa hbwf tc"></a>
 		</script>
 	</div>
