--- a/html/01_HD.html
+++ b/html/01_HD.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>QHB-1-首页(该时段已抢过)</title>
-	<link rel="stylesheet" href="../../public/css/public.min.css">
-	<link rel="stylesheet" href="../static/css/base_HD.min.css">
+	<!-- <link rel="stylesheet" href="../../public/css/public.min.css">
+	<link rel="stylesheet" href="../static/css/base_HD.min.css"> -->
 	<!-- <link rel="stylesheet" href="../static/css/base_HD.mod.css"> -->
 	<!-- <link rel="stylesheet" href="../static/css/base.css" type="text/css"> -->
   <!-- <link rel="stylesheet" href="../static/css/base_HD.css"> -->
@@ -51,15 +51,15 @@
 			<a href="#" class="pa hbwf tc"></a>
 		</script>
 	</div>
-	<script src="../../public/js/jquery.min.js"></script>
+	<!-- <script src="../../public/js/jquery.min.js"></script>
 	<script src="../../public/js/jquery.x.min.js"></script>
 	<script src="../../public/js/template.js"></script>
 	<script src="../static/js/base_HD.js"></script>
-	<script src="../static/js/base_HD_Ajax.js"></script>
+	<script src="../static/js/base_HD_Ajax.js"></script> -->
 	<!-- <script src="../static/js/base_HD.mod.js"></script> -->
-	<!-- <script src="/build/bundle.js"></script> -->
-	<!-- <script src="../../public/js/jquery.min.js"></script>
-  <script src="../static/js/bundle.js"></script> -->
+	<script src="/build/bundle.js"></script>
+	<!-- <script src="../../public/js/jquery.min.js"></script> -->
+  <!-- <script src="../static/js/bundle.js"></script> -->
 	<script>
 		var data = {
 			menuurl: ['#', '#', '#'],//菜单按钮URL,按顺序输出数组,
