--- a/html/03_HD.html
+++ b/html/03_HD.html
@@ -5,7 +5,8 @@
 	<title>QHB-5-我的红包</title>
 	<!-- <link rel="stylesheet" href="../../public/css/public.min.css">
 	<link rel="stylesheet" href="../static/css/base_HD.min.css"> -->
-	<link rel="stylesheet" href="../static/css/base_HD.mod.css">
+	<!-- <link rel="stylesheet" href="../static/css/base_HD.mod.css"> -->
+	<link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body >
 	<div id="wrap" class="pa wrap bg-myhongbao">
@@ -46,7 +47,8 @@
 	<script src="../../public/js/template.js"></script>
 	<script src="../static/js/base_HD.js"></script>
 	<script src="../static/js/base_HD_Ajax.js"></script> -->
-	<script src="../static/js/base_HD.mod.js"></script>
+	<!-- <script src="../static/js/base_HD.mod.js"></script> -->
+	<script src="../static/js/bundle.js"></script>
 	<script>
 		var data = {
 				menuurl: ['#', '#', '#'],//菜单按钮URL,按顺序输出数组,
